[gd_scene load_steps=20 format=3 uid="uid://jn6lkoo3vdrt"]

[ext_resource type="Script" uid="uid://blru7j53opht5" path="res://core/system/interface/interface.gd" id="1_5xmwe"]
[ext_resource type="FontFile" uid="uid://cesouak3176ok" path="res://core/misc_assets/resources/Univers_Condensed_Regular.ttf" id="2_svcw7"]
[ext_resource type="Theme" uid="uid://b1ip8y004rknx" path="res://core/misc_assets/resources/menu_button_style.tres" id="3_1ytlt"]
[ext_resource type="PackedScene" uid="uid://btuvdtlg5u165" path="res://core/system/interface/pause_menu/pause_menu.tscn" id="3_l5642"]

[sub_resource type="Animation" id="Animation_58n8g"]
resource_name = "new_animation"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2nl8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xa3gt"]
_data = {
&"RESET": SubResource("Animation_2nl8f"),
&"new_animation": SubResource("Animation_58n8g")
}

[sub_resource type="Animation" id="Animation_xa3gt"]
resource_name = "new_animation"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Deaths:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n7s7a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Deaths:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3una"]
_data = {
&"RESET": SubResource("Animation_n7s7a"),
&"new_animation": SubResource("Animation_xa3gt")
}

[sub_resource type="Animation" id="Animation_m3una"]
resource_name = "new_animation"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.8, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_phchl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pun7q"]
_data = {
&"RESET": SubResource("Animation_phchl"),
&"new_animation": SubResource("Animation_m3una")
}

[sub_resource type="Animation" id="Animation_pun7q"]
resource_name = "new_animation"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_epyj6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Money:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgcyl"]
_data = {
&"RESET": SubResource("Animation_epyj6"),
&"new_animation": SubResource("Animation_pun7q")
}

[sub_resource type="LabelSettings" id="LabelSettings_aag45"]
font = ExtResource("2_svcw7")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_heuid"]
font = ExtResource("2_svcw7")
font_size = 30
font_color = Color(1, 1, 1, 0.498039)

[sub_resource type="LabelSettings" id="LabelSettings_xrp83"]
font = ExtResource("2_svcw7")
font_size = 32
font_color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5xmwe")

[node name="ScreenFlash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xa3gt")
}
autoplay = "new_animation"

[node name="UpdateDeaths" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m3una")
}

[node name="CollectMoney" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pun7q")
}

[node name="DropMoney" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hgcyl")
}

[node name="Sides" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect3" type="ColorRect" parent="Sides"]
layout_mode = 0
offset_left = 120.0
offset_top = 60.0
offset_right = 160.0
offset_bottom = 660.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="Sides"]
layout_mode = 0
offset_left = 1120.0
offset_top = 60.0
offset_right = 1160.0
offset_bottom = 660.0
color = Color(0, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="Sides"]
layout_mode = 0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 660.0

[node name="ColorRect6" type="ColorRect" parent="Sides"]
layout_mode = 0
offset_left = 1160.0
offset_top = 60.0
offset_right = 1280.0
offset_bottom = 660.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 60.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 660.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="LevelCode" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 416.0
offset_bottom = 60.0
text = "Level: 1-A1"
label_settings = SubResource("LabelSettings_aag45")
vertical_alignment = 1

[node name="Money" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_right = 960.0
offset_bottom = 60.0
text = "$ 727 / 727"
label_settings = SubResource("LabelSettings_aag45")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Deaths" type="Label" parent="."]
layout_mode = 0
offset_left = 804.0
offset_right = 1264.0
offset_bottom = 60.0
text = "Deaths: 65,536"
label_settings = SubResource("LabelSettings_aag45")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 660.0
offset_right = 160.0
offset_bottom = 720.0
theme = ExtResource("3_1ytlt")
theme_override_font_sizes/font_size = 40
text = "Menu"
alignment = 0

[node name="FPS" type="Label" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 660.0
offset_right = 306.0
offset_bottom = 720.0
text = "??? FPS"
label_settings = SubResource("LabelSettings_heuid")
vertical_alignment = 1

[node name="BottomText" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 660.0
offset_right = 960.0
offset_bottom = 720.0
text = "\"Overgrowth.\""
label_settings = SubResource("LabelSettings_aag45")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Label" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 660.0
offset_right = 1220.0
offset_bottom = 720.0
text = "5:55:55"
label_settings = SubResource("LabelSettings_aag45")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TickTimer" type="Label" parent="."]
layout_mode = 0
offset_left = 1221.0
offset_top = 663.0
offset_right = 1329.0
offset_bottom = 723.0
text = ".59"
label_settings = SubResource("LabelSettings_xrp83")
vertical_alignment = 1

[node name="Flash" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 60.0
offset_right = 1120.0
offset_bottom = 660.0
color = Color(1, 1, 1, 0)

[node name="PauseMenu" parent="." instance=ExtResource("3_l5642")]

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
